Knock Mark as Spam and Delete to their next line if mod on small mobile to avoid crashing with PRIVATE MESSAGE if that exists

--- a/app/assets/stylesheets/white_theme/comments.scss
+++ b/app/assets/stylesheets/white_theme/comments.scss
@@ -300,6 +300,13 @@
         color: #f04e1a;
         border-radius: 2px;
         background-color: #ffd1b0;
+        text-indent: 0;
+      }
+      @media only screen and (max-width: 375px) {
+        .private_message + .comment_controls {
+          float: none;
+          margin-top: 40px;
+        }
       }
       .comment_controls {
         font-size: 12px;
@@ -317,6 +324,7 @@
           font-weight: bold;
           color: #e02a02;
         }
+        
       }
       h1,
       h2,
